  * Add support for arm64 (Closes: #735488).
    - Make arm64 use linux-g++ as platform_arg.
    - Fix arch detection.
    - Add qatomic support. This patch is known to not be the most correct way
      to implement them, as it seems to be possible to do it in a faster way,
      but should work non the less until we can provide something better.
    - Add arm64's mkspecs.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 15 Aug 2014 12:02:33 -0300

qt4-x11 (4:4.8.6+git49-gbc62005+dfsg-1) unstable; urgency=medium

  * New upstream GIT snapshot.
  * Update 07_trust_dpkg-arch_over_uname-m.diff and debian/rules in order to
    let mips64[el] build (Closes: #719763). Thanks Yunqiang Su for the patch.
  * Enable using system network proxies by default.
    - Add this information to debian/NEWS to inform our users.
  * Update symbols files with buildd's logs.
  * Refresh patches.
  * Update install files due to the fix of QTBUG-16838.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 25 Jul 2014 14:07:38 -0300

qt4-x11 (4:4.8.6+dfsg-2) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * Add arm64 to no_pch_architectures.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Use the standard compiler provided by build-essential (Closes: 747988).
  * Update symbols files with buildd's and current logs.
  * Add parisc-atomic.patch to improve atomic support on parisc
    (Closes: #741190).
  * Add ppc64el to the list of architectures that build without using pch,
    partly solving #749743.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 16 Jun 2014 10:10:58 -0300

qt4-x11 (4:4.8.6+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Also add ppc64 to the list of non-pch build archs. Thanks Hiroyuki Yamamoto
    for the tip.
  * Refresh patches.
  * Update symbols files with buildd's logs and current build log.
  * Apply upstream's dont_crash_on_broken_gif_images.patch to solve
    CVE-2014-0190.