@@ -10,6 +10,9 @@ qt4-x11 (4:4.8.6+git49-gbc62005+dfsg-2) UNRELEASED; urgency=medium
       to implement them, as it seems to be possible to do it in a faster way,
       but should work non the less until we can provide something better.
     - Add arm64's mkspecs.
+  * Add support for ppc64el (Closes: #749743).
+    - Add ppc64el to 07_trust_dpkg-arch_over_uname-m.diff, as the uname output
+      differs from the arch name.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 15 Aug 2014 12:02:33 -0300
 
